Basic ready. No Bonus. No design

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
 <div>
+    <img src="\images\beer.png" alt="beer image" style='max-width: 100%' />
+    <p><a href="/beers">Check the Beers</a></p>
+    <p><a href="/random-beers">Check a Random Beer</a></p>
 
 </div>
