Basic and Bonus ready. No design

--- a/views/partials/beerpartial.hbs
+++ b/views/partials/beerpartial.hbs
@@ -1,4 +1,5 @@
     <p>{{name}}</p>
-    <p><img src={{image_url}} alt={{name}}></p>  
+    <a href="/beers/{{id}}">
+    <p><a href="/beers/{{id}}"><img src={{image_url}} alt={{name}} ></a></p>  
     <p>{{description}}</p>  
     <p>{{tagline}}</p>  
